update to latest

--- a/000MCU_IOT/Arduino.html
+++ b/000MCU_IOT/Arduino.html
@@ -12,29 +12,90 @@
 
 
 
-
-
-
-
-
-
-
-
-
 <font size="5" color="black">
 =====================================<br />
+
+<p>
+	Arduino开发：烧写ISP代码-板子&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+</p>
+<br />
+<iframe src="https://www.bilibili.com/video/BV1T3411K7Bp?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+<p>
+	Arduino开发：通过2块Arduino板，刷写一个全新的芯片&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+</p>
+<br />
+<iframe src="https://www.bilibili.com/video/BV1ZS4y1c7mu?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+<p>
+	Arduino开发：日常开发&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+</p>
+<br />
+<iframe src="https://www.bilibili.com/video/BV1FS4y1w7XC?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+<p>
+	Arduino开发：Arduino正常下载程序&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+</p>
+<br />
+<iframe src="https://www.bilibili.com/video/BV1Y34y1e7Fv?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
 套件资料：
 </br>
 创乐博旗舰店:小创2022-2-25 16:01:13<br />
 新arduino入门学习套件百度网盘连接下载：<br />
-A链接: https://pan.baidu.com/s/1vUsgRm4ghJwqYewATp40pw 提取码: kh4b 
+A链接: 
+<a href="https://pan.baidu.com/s/1vUsgRm4ghJwqYewATp40pw?pwd=kh4b"><font size="5" color="blue">点击下载1</font></a></br>
+
 <br />
-B 链接：链接: https://pan.baidu.com/s/1AyzsiMD75EBp8u1IufeAQQ 提取码: nnv7 
+B 链接：
+<a href="https://pan.baidu.com/s/1AyzsiMD75EBp8u1IufeAQQ?pwd=nnv7"><font size="5" color="blue">点击下载1</font></a></br>
+
+
 <br />
-C链接：链接: https://pan.baidu.com/s/1Zy0DVeJyoQCxonzsZyl7yA 提取码: u4dj  
+C链接：
+<a href="https://pan.baidu.com/s/1Zy0DVeJyoQCxonzsZyl7yA?pwd=u4dj"><font size="5" color="blue">点击下载1</font></a></br>
+
+ 
 <br />
-图像化资料arduino IOT 套件百度网盘链接图形化编程视频及资料： https://pan.baidu.com/s/1Clzy3CO-mp_ei5Ad-ZlEPg  
-密码：cldt
+图像化资料arduino IOT 套件百度网盘链接图形化编程视频及资料：
+<a href="https://pan.baidu.com/s/1Clzy3CO-mp_ei5Ad-ZlEPg?pwd=cldt"><font size="5" color="blue">点击下载1</font></a></br>
+
+
+<p>
+	<a href="https://www.arduino.cn/forum.php?gid=92" target="_blank"><strong>Arduino中文社区</strong></a> 
+</p>
+
+
+
+<p>
+	<a href="http://www.uinio.com/Embedded/Arduino/#mega-2560" target="_blank"><strong>Arduino知识</strong></a> 
+</p>
+
+<p>
+	<a href="https://www.w3cschool.cn/arduino/arduino_overview.html" target="_blank"><strong>Arduino教程</strong></a> 
+</p>
+
+<p>
+	<a href="https://www.arduino.cc/reference/en/" target="_blank"><strong>Arduino API参考</strong></a> 
+</p>
+
+<p>
+	<a href="https://www.ncnynl.com/archives/201606/39.html" target="_blank"><strong>Arduino 编程语法</strong></a> 
+</p>
+
+<p>
+	<a href="http://www.51hei.com/bbs/dpj-209325-1.html" target="_blank"><strong>arduino使用spintf来格式化输出</strong></a> 
+</p>
+
+
 
 <br />
 =====================================<br />
