--- a/000MCU_IOT/STM8_STM32.html
+++ b/000MCU_IOT/STM8_STM32.html
@@ -9,22 +9,162 @@
 
 <html>
 
-
-
-
-
-
-
-
-
-
-
-
-
 <font size="5" color="black">
-=====================================<br />
-内容整理中
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> STM32 cubeMX + HAL 库 实现PWM—改变频率  </span></strong>
 <br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1qT411E7VU?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> STM32 cubeMX + HAL 库 实现PWM波形输出  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1zT411E787?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> STM32 cubeMX + HAL 库 实现485串口调试功能  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV18e4y1Q71B?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> STM32 cubeMX + HAL 库 实现简单时钟2  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1yU4y1e7kv?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> STM32 cubeMX + HAL 库 实现简单时钟  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1894y1D77D?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> QT C++实现的 继电器破解2 上位机，运行环境：windows  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1pG4y1i7GR?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;"> QT C++实现的 继电器破解 上位机，运行环境：windows  </span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1Sg411Z7MM?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">QT C++实现的 CRC校验码计算 上位机，运行环境：windows</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1YG4y1i71L?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">QT C++实现的 无线温度控制系统 上位机，运行环境：windows</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1YG4y1i71L?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">QT C++实现的温度采集上位机，运行环境：windows</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1ZS4y147i6?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">STM32 cubeMX + HAL 库 实现 MDK观察全局变量</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1rB4y1k7v8?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">正点原子ESP8266 wifi模块--云</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1Qe4y1C7ZG?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">正点原子ESP8266 wifi模块--AT指令</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1zG4y1z74V?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">正点原子ESP8266 wifi模块--刷固件，联网，AT指令</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1za411u7tw?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">正点原子ESP8266 wifi模块--刷固件，联网，AT指令</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1F14y1v74D?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">正点原子ESP8266 wifi模块--刷固件，联网，AT指令</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV13e4y1a7ue?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">STM32 TCP/IP联网</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1FP411G7rj?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">STM32 TCP/IP联网</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1114y1e7eF?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
 
 =====================================<br />
 
