--- a/000MCU_IOT/raspberry.html
+++ b/000MCU_IOT/raspberry.html
@@ -9,22 +9,71 @@
 
 <html>
 
-
-
-
-
-
-
-
-
-
-
-
-
-<font size="5" color="black">
 =====================================<br />
-内容整理中
+<p>
+	<a href="https://raspberrypi-guide.github.io/electronics/image-and-video-recording" target="_blank"><strong>树莓派官网</strong></a> 
+</p>
+
+<p>
+	<a href="https://raspberrypi-guide.github.io/electronics/image-and-video-recording" target="_blank"><strong>Raspberry Pi树莓派手册</strong></a> 
+</p>
+
 <br />
+<br />
+
+windows 远程控制 树莓派工具====VNC：
+<a href="https://pan.baidu.com/s/1b4Yh4mvoHRaoZxldmP1XeA?pwd=aaaa"><font size="4" color="blue">点击下载VNC</font></a></br>
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">树莓派QT聊天工具开发</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1jG4y1675j/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">树莓派远程连接</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV19e4y1a7wt/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">树莓派远程安装QT成功运行程序</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1UB4y1G73X/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">树莓派日常操作</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1JT411F7LV/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">树莓派远程安装QT</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1jP411L75r/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+
+
+
 
 =====================================<br />
 
