--- a/000ToolsDownload/01articals/04MQtt/04MQtt.html
+++ b/000ToolsDownload/01articals/04MQtt/04MQtt.html
@@ -14,7 +14,7 @@
 
 <p>
 	<br />
-<strong><span style="font-size:18px;">使用MQTT进行消息通信</span></strong><br />
+<strong><span style="font-size:18px;">MQTT协议通信</span></strong><br />
 <br />
 
 =====☆☆☆☆☆=====
@@ -22,17 +22,39 @@
 	<strong>MQTT在windows下的安装工具及使用说明（验证OK）</strong>
 </p>
 <p>
-TitleQQQQ
+
+
 <br />
-链接：https://pan.baidu.com/s/1EeX_st6Npm2_gr8cv-Xwpw 
-<br />
-提取码：aaaa
-<br />
+
+
+<a href="https://pan.baidu.com/s/1EeX_st6Npm2_gr8cv-Xwpw?pwd=aaaa"><font size="4" color="blue">点击下载MQTT资料包</font></a></br>
+
+
+
+<p>
+	<a href="https://gitee.com/zzzbbb001_admin/qmqttdemo" target="_blank"><strong>代码下载</strong></a> 
+</p>
+<p>
+	<br />
 </p>
 <p>
 	<br />
 </p>
 
+
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">MQTT连接,MQTT消息发送和订阅===QT,C++ @windows,Linux</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1Xd4y1X71r?spm_id_from=333.999.0.0&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
+<br />
+<br />
+<br />
 
 
 <span style="font-size:18px;">要点包含：</span><br />
