--- a/000ToolsDownload/01articals/05others/05others.html
+++ b/000ToolsDownload/01articals/05others/05others.html
@@ -32,22 +32,41 @@
 	<br />
 </p>
 =====☆☆☆☆☆=====
+<p>
+	<a href="http://c.biancheng.net/cplus/" target="_blank"><strong>C++教程</strong></a> 
+</p>
+
+<p>
+	<a href="http://c.biancheng.net/qt/" target="_blank"><strong>QT教程</strong></a> 
+</p>
+
+<p>
+	<a href="https://www.bilibili.com/video/BV1Ai4y1c7Di/?spm_id_from=333.788.recommend_more_video.7&vd_source=f2a20f3819fa6934ca6ec995b8700bf3" target="_blank"><strong>QT视频</strong></a> 
+</p>
+
+<p>
+	<a href="https://www.runoob.com/cprogramming/c-function-snprintf.html" target="_blank"><strong>C语言教程</strong></a> 
+</p>
+
+
+=====☆☆☆☆☆=====
 <li><a href="./AI_network/基于神经网络的入侵振动检测系统9.html"><strong>基于神经网络的入侵振动检测系统</strong></a></li>
-<p>
-该论文详细阐述了如何在系统中引入神经网络的方法。文档下载地址：<br />
-链接：https://pan.baidu.com/s/1jvDW_5DZoQULCG2c6UKVyg 
-提取码：aaaa
 
-</p>
 <p>
-	<br />
+该论文详细阐述了如何在系统中引入神经网络的方法。
+<br />
+<a href="https://pan.baidu.com/s/1jvDW_5DZoQULCG2c6UKVyg?pwd=aaaa"><font size="4" color="blue">点击下载  </a></br>
 </p>
 
 
+<p>
+	<a href="https://blog.csdn.net/weixin_43897736/article/details/99865993" target="_blank"><strong>农业:几种植被指数</strong></a> 
+</p>
 
 
-
-
+<br />
+<img src="./01heap.jpg"\/>
+<br />
 
 
 <!--
