--- a/000ToolsDownload/01articals/05others/audio_video.html
+++ b/000ToolsDownload/01articals/05others/audio_video.html
@@ -10,6 +10,14 @@
 <html>
 
 
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">Word文档中输入公式</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1kB4y147k3/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
 
 <strong><span style="font-size:16px;">五年级几何题目讲解---求面积，周长</span></strong>
 <br />
