--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>wang001's home</title>
+		<title>welcome wang001's home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">w001博客<font size="2",color=black>-----2022,聚焦桌面软件，上位机软件开发。专注C++, QT【2022,加油，抗疫必胜!】</font><br/></a></h1>
+								<h1><a href="index.html">wang001<font size="2",color=black>-----2023,桌面软件，上位机软件开发。专注C++, QT, STM32【2023,加油，后疫情时代！】</font><br/></a></h1>
 							</div>
 
 						<!-- Nav -->
@@ -36,7 +36,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>软件下载</h3>
+										<h3>软件下载-原创，开源</h3>
 										<ul class="style2">
 											<li><a href="./000swDownload/014USBCamera/014USBCamera.html">USBCamera-USB摄像头神器</a></li>
 											<li><a href="./000swDownload/007balabala/balabala.html">balabala视频格式转换器</a></li>
@@ -47,6 +47,7 @@
 											<li><a href="./000swDownload/011TubeDownloader/TubeDownloader.html">TubeDownloader(视频下载软件)</a></li>
 											<li><a href="./000swDownload/001pdfReader/pdfReader.html">pdf文档阅读器</a></li>
 											<li><a href="./000swDownload/012studentMath/012studentMath.html">小学数学计算小能手</a></li>
+											<li><a href="./000swDownload/016chatter/016chatter.html">局域网通信工具</a></li>
 										</ul>
 									</section>
 
@@ -55,14 +56,16 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>开源工程</h3>
+										<h3>QT,C++开源工程</h3>
 										<ul class="style2">
 											<li><a href="https://github.com/terryshenzhen/processCheckAndKill">进程检测和杀进程工具-QT,C++</a></li>
 											<li><a href="./000libsDownload/qwt/qwt.html">绘图库QWT</a></li>
 											<li><a href="./000swDownload/002temperature/temperature.html">温度采集上位机</a></li>
 											<li><a href="./000swDownload/003QMYSQL_stu/003QMYSQL_stu.html">QMYSQL数据库操作示例项目</a></li>
 											<li><a href="./000swDownload/004ledLight01/004ledLight01.html">QT界面圆形指示灯控件</a></li>
-											<li><a href="./000swDownload/005QSQLite/005QSQLite.html">QSQLite数据库应用示例：同时操作多个数据库文件</a></li>
+											<li><a href="./000swDownload/005QSQLite/005QSQLite.html">QSQLite数据库应用示例</a></li>
+											<li><a href="./000swDownload/015CAN_modbus/015CAN_modbus.html">CAN,modbus,485,串口通信</a></li>
+											<li><a href="./000swDownload/017SPDS/017SPDS.html">QT,C++写的一套上位机控制程序，通过modebus协议控制STM32下位机，进而控制电机运动</a></li>
 										</ul>
 									</section>
 
@@ -92,7 +95,7 @@
 										<li><a href="./000swDownload/000swUpgrade/upgradeAPI.html">自定义升级库的简要设计说明</a></li>
 										<li><a href="./000ToolsDownload/01articals/02multilang/02multilang.html">Qt实现多国语言的关键步骤</a></li>
 										<li><a href="./000ToolsDownload/01articals/03QJson/03QJson.html">Qt中使用QJson类来解析Json数据</a></li>
-										<li><a href="./000ToolsDownload/01articals/04MQtt/04MQtt.html">使用MQTT进行消息通信</a></li>
+										<li><a href="./000ToolsDownload/01articals/04MQtt/04MQtt.html">MQTT协议通信</a></li>
 										<li><a href="./000ToolsDownload/000toolsALL/000toolsALL.html">常用工具集合</a></li>
 										<li><a href="./000ToolsDownload/01articals/05others/05others.html">其他资源</a></li>
 									</section>
@@ -118,10 +121,11 @@
 									<section class="widget contact last">
 										<h3>联系方式</h3>
 										<p>
-										<a href="https://blog.csdn.net/weixin_43577616?spm=1000.2115.3001.5343">csdn主页</a></br>
+										<a href="https://blog.csdn.net/weixin_43577616?spm=1000.2115.3001.5343">csdn个人博客</a></br>
+										<a href="https://space.bilibili.com/605943789">Bilibili个人视频</a></br>
+										<a href="https://gitee.com/zzzbbb001_admin">Gitee代码仓库</a></br>
+										<a href="https://github.com/terryshenzhen">Github code profile</a></br>
 										<a href="./00donate/contact01/contact01.html">weichat</a></br>
-										<a href="http://w1238827.lofter.com/">163主页</a></br>
-										<a href="https://www.cnblogs.com/laowang001/">cnblog主页</a></br>
 										<a href="./00donate/donate.html">捐赠</a></br>
 										</br>
 										</p>
