--- a/000libsDownload/qwt/qwt.html
+++ b/000libsDownload/qwt/qwt.html
@@ -46,6 +46,16 @@
 
 QWT下载地址：
 <a href="https://cloud.189.cn/t/ANfYfiAZrUne"><font size="13" color="blue">点击下载2</font></a></br>
+
+=======☆☆☆☆☆☆=======<br />
+
+<strong><span style="font-size:16px;">QWT的使用方法</span></strong>
+<br />
+<br />
+<iframe src="https://www.bilibili.com/video/BV1FG411a7xN/?vd_source=f2a20f3819fa6934ca6ec995b8700bf3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 640px; height: 430px; max-width: 100%"> </iframe>
+<br />
+
+
 <p>=====================================</p>
 </p>
 <img src="./APP_mainUI.jpg"\/>
