--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">wang001<font size="2",color=black>-----2023,桌面软件，上位机软件开发。专注C++, QT, STM32【2023,加油，后疫情时代！】</font><br/></a></h1>
+								<h1><a href="index.html">
+								老王@深圳<font size="5",color=black>-----专注于桌面软件，上位机软件开发。主要使用C++, QT</font><br/></a></h1>
 							</div>
 
 						<!-- Nav -->
