--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">
-								老王@深圳<font size="5",color=black>-----专注于桌面软件，上位机软件开发。主要使用C++, QT</font><br/></a></h1>
+								老王@深圳<font size="5",color=black>-----专注于桌面、上位机软件开发。主要使用C++, QT</font><br/></a></h1>
 							</div>
 
 						<!-- Nav -->
@@ -37,18 +37,19 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>软件下载-原创，开源</h3>
+										<h3>原创软件</h3>
 										<ul class="style2">
-											<li><a href="./000swDownload/014USBCamera/014USBCamera.html">USBCamera-USB摄像头神器</a></li>
-											<li><a href="./000swDownload/007balabala/balabala.html">balabala视频格式转换器</a></li>
+											<li><a href="./000swDownload/014USBCamera/014USBCamera.html">USB摄像头神器</a></li>
+											<li><a href="./000swDownload/007balabala/balabala.html">视频格式转换器</a></li>
 											<li><a href="./000swDownload/006sysTime/sysTime.html">sysTime(系统时间)</a></li>
-											<li><a href="./000swDownload/010feedData/feedData.html">feedData_模拟数据生成器</a></li>
-											<li><a href="./000swDownload/009HKCam/HKCam.html">HKCam_海康摄像头控制端</a></li>
-											<li><a href="./000swDownload/008systemMonitor/systemMonitor.html">systemMonitor(磁盘空间监测工具)</a></li>
-											<li><a href="./000swDownload/011TubeDownloader/TubeDownloader.html">TubeDownloader(视频下载软件)</a></li>
+											<li><a href="./000swDownload/010feedData/feedData.html">模拟数据生成器</a></li>
+											<li><a href="./000swDownload/009HKCam/HKCam.html">海康摄像头控制端</a></li>
+											<li><a href="./000swDownload/008systemMonitor/systemMonitor.html">磁盘空间监测</a></li>
+											<li><a href="./000swDownload/011TubeDownloader/TubeDownloader.html">视频下载软件</a></li>
 											<li><a href="./000swDownload/001pdfReader/pdfReader.html">pdf文档阅读器</a></li>
 											<li><a href="./000swDownload/012studentMath/012studentMath.html">小学数学计算小能手</a></li>
 											<li><a href="./000swDownload/016chatter/016chatter.html">局域网通信工具</a></li>
+											<li><a href="./000swDownload/018Game/018Game.html">开发的一些游戏</a></li>
 										</ul>
 									</section>
 
@@ -57,16 +58,16 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>QT,C++开源工程</h3>
+										<h3>QT,C++开源</h3>
 										<ul class="style2">
-											<li><a href="https://github.com/terryshenzhen/processCheckAndKill">进程检测和杀进程工具-QT,C++</a></li>
+											<li><a href="https://github.com/terryshenzhen/processCheckAndKill">进程检&杀工具</a></li>
 											<li><a href="./000libsDownload/qwt/qwt.html">绘图库QWT</a></li>
 											<li><a href="./000swDownload/002temperature/temperature.html">温度采集上位机</a></li>
-											<li><a href="./000swDownload/003QMYSQL_stu/003QMYSQL_stu.html">QMYSQL数据库操作示例项目</a></li>
-											<li><a href="./000swDownload/004ledLight01/004ledLight01.html">QT界面圆形指示灯控件</a></li>
-											<li><a href="./000swDownload/005QSQLite/005QSQLite.html">QSQLite数据库应用示例</a></li>
-											<li><a href="./000swDownload/015CAN_modbus/015CAN_modbus.html">CAN,modbus,485,串口通信</a></li>
-											<li><a href="./000swDownload/017SPDS/017SPDS.html">QT,C++写的一套上位机控制程序，通过modebus协议控制STM32下位机，进而控制电机运动</a></li>
+											<li><a href="./000swDownload/003QMYSQL_stu/003QMYSQL_stu.html">QMYSQL数据库示例</a></li>
+											<li><a href="./000swDownload/004ledLight01/004ledLight01.html">圆形指示灯控件</a></li>
+											<li><a href="./000swDownload/005QSQLite/005QSQLite.html">SQLite数据库示例</a></li>
+											<li><a href="./000swDownload/015CAN_modbus/015CAN_modbus.html">Modbus,485,串口通信</a></li>
+											<li><a href="./000swDownload/017SPDS/017SPDS.html">土壤机器人上位机</a></li>
 										</ul>
 									</section>
 
@@ -79,9 +80,9 @@
 										<li><a href="./000MCU_IOT/STM8_STM32.html">STM8_STM32</a></li>
 										<li><a href="./000MCU_IOT/Arduino.html">Arduino</a></li>
 										<li><a href="./000MCU_IOT/ffmpeg.html">ffmpeg视频处理</a></li>
-										<li><a href="./000MCU_IOT/openCV.html">openCV-图像视频处理</a></li>
+										<li><a href="./000MCU_IOT/openCV.html">openCV图像处理</a></li>
 										<li><a href="./000MCU_IOT/openMV.html">openMV</a></li>
-										<li><a href="./000MCU_IOT/raspberry.html">raspberry pi树莓派</a></li>
+										<li><a href="./000MCU_IOT/raspberry.html">raspberryPi树莓派</a></li>
 										<li><a href="./000MCU_IOT/IOT_all.html">IOT综合</a></li>
 									</section>
 
@@ -92,10 +93,10 @@
 									<section class="widget links">
 										<h3>精品文章/工具</h3>
 										<li><a href="./000ToolsDownload/innosetup/innosetup.html">exe打包工具innosetup</a></li>
-										<li><a href="./000ToolsDownload/QT_andtoos_version/QT_andtoos_version.html">QT，C++开发相关工具--系列</a></li>
-										<li><a href="./000swDownload/000swUpgrade/upgradeAPI.html">自定义升级库的简要设计说明</a></li>
-										<li><a href="./000ToolsDownload/01articals/02multilang/02multilang.html">Qt实现多国语言的关键步骤</a></li>
-										<li><a href="./000ToolsDownload/01articals/03QJson/03QJson.html">Qt中使用QJson类来解析Json数据</a></li>
+										<li><a href="./000ToolsDownload/QT_andtoos_version/QT_andtoos_version.html">QT，C++相关工具</a></li>
+										<li><a href="./000swDownload/000swUpgrade/upgradeAPI.html">自定义升级库的设计</a></li>
+										<li><a href="./000ToolsDownload/01articals/02multilang/02multilang.html">Qt实现多国语言步骤</a></li>
+										<li><a href="./000ToolsDownload/01articals/03QJson/03QJson.html">QJson类来解析Json数据</a></li>
 										<li><a href="./000ToolsDownload/01articals/04MQtt/04MQtt.html">MQTT协议通信</a></li>
 										<li><a href="./000ToolsDownload/000toolsALL/000toolsALL.html">常用工具集合</a></li>
 										<li><a href="./000ToolsDownload/01articals/05others/05others.html">其他资源</a></li>
@@ -106,11 +107,11 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>作品展廊</h3>
+										<h3>个人作品</h3>
 										<ul class="style2">
-											<li><a href="./zzSystem/all.html">莎个人作品展</a></li>
-											<li><a href="./zzSystem/all.html">康个人作品展</a></li>
-											<li><a href="./000ToolsDownload/01articals/05others/audio_video.html">其他音视频作品</a></li>
+											<li><a href="./zzSystem/all.html">Jenniffer作品</a></li>
+											<li><a href="./zzSystem/all.html">Ken作品</a></li>
+											<li><a href="./000ToolsDownload/01articals/05others/audio_video.html">其他音视频</a></li>
 											<!--待加 <li><a href="#">Etiam feugiat condimentum</a></li> -->
 										</ul>
 									</section>
@@ -120,7 +121,7 @@
 
 								<!-- Contact -->
 									<section class="widget contact last">
-										<h3>联系方式</h3>
+										<h3>联系</h3>
 										<p>
 										<a href="https://blog.csdn.net/weixin_43577616?spm=1000.2115.3001.5343">csdn个人博客</a></br>
 										<a href="https://space.bilibili.com/605943789">Bilibili个人视频</a></br>
