--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">
-								老王@深圳<font size="5",color=black>-----专注于桌面、上位机软件开发。主要使用C++, QT</font><br/></a></h1>
+								老王@深莞<font size="5",color=black>-----专注于桌面、上位机软件开发。使用C++, QT</font><br/></a></h1>
 							</div>
 
 						<!-- Nav -->
