update the path

--- a/000libsDownload/qwt/qwt.html
+++ b/000libsDownload/qwt/qwt.html
@@ -8,6 +8,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+<div style="text-align:right;">
+	<a href="../../index.html"><strong><span style="color:#003399;font-size:14px;">&lt;&lt; 返回主页</span></strong></a>
+</div>
 	</head>
 	<body class="is-preload no-sidebar">
 		<div id="page-wrapper">
