--- a/000swDownload/015CAN_modbus/015CAN_modbus.html
+++ b/000swDownload/015CAN_modbus/015CAN_modbus.html
@@ -4,7 +4,7 @@
 -->
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <div style="text-align:right;">
-	<a href="http://zzzbbb001_admin.gitee.io/"><strong><span style="color:#003399;font-size:14px;">&lt;&lt; 返回主页</span></strong></a>
+	<a href="../../index.html"><strong><span style="color:#003399;font-size:14px;">&lt;&lt; 返回主页</span></strong></a>
 </div>
 
 <html>
