--- a/000swDownload/010feedData/feedData.html
+++ b/000swDownload/010feedData/feedData.html
@@ -12,7 +12,7 @@
 	<body class="is-preload no-sidebar">
 		<div style="text-align:right;">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-		<a href="http://zzzbbb001_admin.gitee.io/"><strong><span style="color:#003399;font-size:14px;"> 返回主页</span></strong></a>
+		<a href="../../index.html"><strong><span style="color:#003399;font-size:14px;"> 返回主页</span></strong></a>
 		</div>
 		
 		<div id="page-wrapper">
