--- a/000swDownload/018Game/018lianliankan1.html
+++ b/000swDownload/018Game/018lianliankan1.html
@@ -13,7 +13,7 @@
 	
 				<div style="text-align:right;">
 			<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-			<a href="javascript:void(0);" onclick="history.back();"><strong><span style="color:#003399;font-size:14px;"> 返回主页</span></strong></a>
+			<a href="../../index.html"><strong><span style="color:#003399;font-size:14px;"> 返回主页</span></strong></a>
 			</div>
 			
 		<div id="page-wrapper">
