--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 											<li><a href="./000swDownload/001pdfReader/pdfReader.html">pdf文档阅读器</a></li>
 											<li><a href="./000swDownload/012studentMath/012studentMath.html">小学数学计算小能手</a></li>
 											<li><a href="./000swDownload/016chatter/016chatter.html">局域网通信工具</a></li>
-											<li><a href="./000swDownload/018Game/018Game.html">开发的一些游戏</a></li>
+											<li><a href="./000swDownload/018Game/018Game.html">趣味游戏</a></li>
+											<li><a href="./000swDownload/019muyu/019muyu.html">禅心木鱼</a></li>
 										</ul>
 									</section>
 
