--- a/000swDownload/019muyu/019muyu.html
+++ b/000swDownload/019muyu/019muyu.html
@@ -75,13 +75,13 @@ May your mind reflect wisdom like a clear mirror, and your body flourish like th
 <p>=====================================</p>
 
 下载链接1：
-<a href="https://pan.baidu.com/s/1-wNmxBvli9yHfXWIiv6KSQ?pwd=aaaa"><font size="13" color="blue">点击下载1</font></a></br>
+<a href="https://pan.baidu.com/s/1LVgSFvB8tymfDY1wktrMLg?pwd=aaaa"><font size="13" color="blue">点击下载1 （访问码：aaaa）</font></a></br>
 
 
 <p>=====================================</p>
 
 下载链接2：
-<a href="https://cloud.189.cn/"><font size="13" color="blue">点击下载2</font></a></br>
+<a href="https://cloud.189.cn/t/neUBjyI7Nraq"><font size="13" color="blue">点击下载2 （访问码：6anu）</font></a></br>
 <p>=====================================</p>
 </p>
 
