--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 											<li><a href="./000swDownload/016chatter/016chatter.html">局域网通信工具</a></li>
 											<li><a href="./000swDownload/018Game/018Game.html">趣味游戏</a></li>
 											<li><a href="./000swDownload/019muyu/019muyu.html">禅心木鱼</a></li>
+											<li><a href="./000swDownload/020aaawarehouse/020aaawarehouse.html">仓储管理系统</a></li>
 										</ul>
 									</section>
 
