--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 											<li><a href="./000swDownload/018Game/018Game.html">趣味游戏</a></li>
 											<li><a href="./000swDownload/019muyu/019muyu.html">禅心木鱼</a></li>
 											<li><a href="./000swDownload/020aaawarehouse/020aaawarehouse.html">仓储管理系统</a></li>
+											<li><a href="./000swDownload/021beidou/021beidou.html">北斗卫星定位</a></li>
 										</ul>
 									</section>
 
